[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/ARIBLK.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameOverlay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.160784, 0.635294, 0.211765, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="GameOverlay" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CurrentScoreLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 115.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.113725, 0.976471, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="NumOrganisms" type="Label" parent="."]
margin_left = 16.0
margin_top = 155.0
margin_right = 233.0
margin_bottom = 240.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Active 
organisms:"

[node name="NumObstacles" type="Label" parent="."]
margin_left = 16.0
margin_top = 88.0
margin_right = 165.0
margin_bottom = 123.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Obstacles:"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 171.0
margin_right = 827.0
margin_bottom = 600.0
